ros2_ws/log/build_2023-09-29_19-12-28/bluey_tools/stderr.log
  File "/home/jenkin/Documents/bluey/ros2_ws/install/bluey_tools/lib/python3.8/site-packages/bluey_tools/bluey_ctrl_node.py", line 119
    self.get_logger().info(f"{self.get_name()} found {msg}
                                                         ^
SyntaxError: EOL while scanning string literal

